--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,7 +14,7 @@
         android:background="#9C32CA"
         android:gravity="center_vertical"
         android:paddingStart="@dimen/_20dp"
-        android:text="@string/cadastro"
+        android:text="@string/app_name"
         android:textAlignment="textStart"
         android:textColor="#FAFAFA"
         android:textSize="20sp"
@@ -25,26 +25,26 @@
 
     <TextView
         android:id="@+id/labelNameTv"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
+        android:layout_marginHorizontal="20dp"
         android:layout_marginTop="12dp"
         android:text="@string/nome_completo"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/nameTi"
-        android:layout_width="377dp"
-        android:layout_height="61dp"
-        android:layout_marginStart="16dp"
+    <EditText
+        android:id="@+id/nameEt"
+        android:layout_width="0dp"
+        android:layout_height="48dp"
+        android:layout_marginHorizontal="20dp"
         android:layout_marginTop="2dp"
+        android:ems="10"
+        android:hint="@string/digite_seu_nome"
+        android:inputType="text"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/labelNameTv">
-
-        <com.google.android.material.textfield.TextInputEditText
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" />
-    </com.google.android.material.textfield.TextInputLayout>
+        app:layout_constraintTop_toBottomOf="@+id/labelNameTv" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
