--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -41,7 +41,6 @@
         android:layout_marginHorizontal="20dp"
         android:layout_marginTop="2dp"
         android:ems="10"
-        android:hint="@string/digite_seu_nome"
         android:inputType="text"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -66,7 +65,7 @@
         android:layout_marginHorizontal="20dp"
         android:layout_marginTop="2dp"
         android:ems="10"
-        android:hint="@string/digite_seu_telefone"
+        android:hint="@string/ex_12_93456_7890"
         android:inputType="numberSigned"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.34"
