--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -59,7 +59,7 @@
         app:layout_constraintTop_toBottomOf="@+id/nameEt" />
 
     <EditText
-        android:id="@+id/editTextText"
+        android:id="@+id/phoneEt"
         android:layout_width="0dp"
         android:layout_height="48dp"
         android:layout_marginHorizontal="20dp"
@@ -81,10 +81,10 @@
         android:text="@string/e_mail"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextText" />
+        app:layout_constraintTop_toBottomOf="@+id/phoneEt" />
 
     <EditText
-        android:id="@+id/editTextText3"
+        android:id="@+id/emailEt"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="20dp"
@@ -104,7 +104,7 @@
         android:text="@string/ingressar_na_lista_de_e_mails"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextText3" />
+        app:layout_constraintTop_toBottomOf="@+id/emailEt" />
 
     <RadioGroup
         android:id="@+id/sexoRg"
