--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -188,5 +188,33 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/stateTv" />
 
+    <Button
+        android:id="@+id/cleanBt"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="24dp"
+        android:layout_marginEnd="5dp"
+        android:text="@string/limpar"
+        android:background="@null"
+        app:layout_constraintDimensionRatio="w,0"
+        app:layout_constraintEnd_toStartOf="@+id/saveBt"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/stateSn" />
+
+    <Button
+        android:id="@+id/saveBt"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="5dp"
+        android:layout_marginEnd="20dp"
+        android:text="@string/salvar"
+        app:layout_constraintBottom_toBottomOf="@+id/cleanBt"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/cleanBt"
+        app:layout_constraintTop_toTopOf="@+id/cleanBt" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
