--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -91,6 +91,7 @@
         android:layout_marginTop="2dp"
         android:ems="10"
         android:inputType="textEmailAddress"
+        android:minHeight="48dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/emailTv" />
@@ -109,7 +110,7 @@
     <RadioGroup
         android:id="@+id/sexoRg"
         android:layout_width="0dp"
-        android:layout_height="42dp"
+        android:layout_height="wrap_content"
         android:layout_marginHorizontal="20dp"
         android:layout_marginTop="2dp"
         android:orientation="horizontal"
@@ -162,6 +163,7 @@
         android:layout_marginTop="2dp"
         android:ems="10"
         android:inputType="text"
+        android:minHeight="48dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/cityTv" />
@@ -180,7 +182,7 @@
     <Spinner
         android:id="@+id/stateSn"
         android:layout_width="0dp"
-        android:layout_height="45dp"
+        android:layout_height="48dp"
         android:layout_marginHorizontal="20dp"
         android:layout_marginTop="2dp"
         android:entries="@array/states_of_brazil"
